added badge to readme

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,11 +27,11 @@ deploy:
     branch: master
 
 after_build:
-  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\HSDRawViewer\bin\Release\mexTool.exe"
-  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\HSDRawViewer\bin\Release\mexTool.exe.config"
-  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\HSDRawViewer\bin\Release\lib"
-  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\HSDRawViewer\bin\Release\CSCore.dll"
-  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\HSDRawViewer\bin\Release\YamlDotNet.dll"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexTool.exe"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexTool.exe.config"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\lib"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\CSCore.dll"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\YamlDotNet.dll"
   - 7z rn "mexTool.zip" "CSCore.dll" "lib\CSCore.dll"
   - 7z rn "mexTool.zip" "YamlDotNet.dll" "lib\YamlDotNet.dll"
   - 7z d "mexTool.zip" "lib\*.xml"
