wip updater added and icon resize undo fixes #6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,8 @@ deploy:
 after_build:
   - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexTool.exe"
   - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexTool.exe.config"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexUpdater.exe"
+  - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\mexUpdater.exe.config"
   - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\lib"
   - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\CSCore.dll"
   - 7z a "mexTool.zip" "%APPVEYOR_BUILD_FOLDER%\mexTool\bin\Release\YamlDotNet.dll"
