--- a/mexTool/packages.config
+++ b/mexTool/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
+  <package id="Octokit" version="0.48.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="YamlDotNet" version="9.1.0" targetFramework="net472" />
 </packages>
