bug fixes and usability improvements: -updated map gobj copy to clipboard -suggest stage/fighter name on export zip -fixed dreamland gobj count for installing -multi stage install -stage replace based on filename -fixed effect save bug prevent the removal of effect files

--- a/mexTool/mexTool.csproj
+++ b/mexTool/mexTool.csproj
@@ -399,6 +399,7 @@
     <Content Include="mexUpdater.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\category_filesystem.png" />
     <None Include="Resources\gaw.png" />
     <None Include="Resources\category_stage.png" />
     <None Include="Resources\category_sound.png" />
