separated mex codes from custom codes

--- a/mexTool/lib/codes.ini
+++ b/mexTool/lib/codes.ini
@@ -1,4 +1,4 @@
-$Initialize Item Data []
+$!ADDITIONAL | Initialize Item Data []
 C2268754 00000009 #Initialize Item Data
 7C0802A6 90010004
 9421FF00 BE810008
@@ -10,14 +10,14 @@ BA810008 80010104
 38210100 7C0803A6
 60000000 00000000
 
-$Initialize Stage Data []
+$!ADDITIONAL | Initialize Stage Data []
 C21C154C 00000004 #Initialize Stage Data
 38800204 3D808000
 618CC160 7D8903A6
 4E800421 281A0000
 60000000 00000000
 
-$Use Save Banner #1 []
+$!ADDITIONAL | Use Save Banner #1 []
 C201C838 00000005 #Use Save Banner #1
 3C608000 80630000
 3C804754 60844D45
@@ -25,13 +25,13 @@ C201C838 00000005 #Use Save Banner #1
 38000002 48000008
 38000001 00000000
 
-$Disable Special Records []
+$!ADDITIONAL | Disable Special Records []
 C2173EEC 00000001 #Disable Special Messages
 4E800020 00000000
 C2172898 00000001 #Disable Trophy Messages
 4E800020 00000000
 
-$On Crash []
+$!ADDITIONAL | On Crash []
 C2160154 00000003 #Clear Bootup OSReports
 3C60804C 6063F7E8
 38800000 9083000C
@@ -112,7 +112,7 @@ C2397C10 00000009 #Reboot With LRAStart
 7D8903A6 4E800421
 881F0000 00000000
 
-$Skip Memcard Prompt []
+$!ADDITIONAL | Skip Memcard Prompt []
 C21AF6F4 00000006 #Skip Memcard Prompt
 2C1D000F 41820010
 2C1D000D 41820008
@@ -121,7 +121,7 @@ C21AF6F4 00000006 #Skip Memcard Prompt
 4E800420 2C1D0000
 60000000 00000000
 
-$TextTransparency []
+$!ADDITIONAL | TextTransparency []
 C23A9220 00000008 #add alpha tev
 38600000 3880001C
 3D808034 618C03B4
@@ -135,7 +135,7 @@ C23A8D90 00000002 #copy alpha to 0x8c
 981F008E 881F0033
 981F008F 00000000
 
-$Unlock Everything []
+$!ADDITIONAL | Unlock Everything []
 C215EE98 00000001 #Unlock All-Star
 38600001 00000000
 C215EDDC 00000001 #Unlock Sound Test
@@ -173,15 +173,15 @@ C230490C 00000001 #Have 99 of Every Trophy
 C23044F0 00000001 #Spoof All Trophies as Unlocked
 38600001 00000000
 
-$Allow Staling in Develop Mode []
+$!DEBUG | Allow Staling in Develop Mode []
 C2089250 00000001 #Allow Staling in Develop Mode
 48000008 00000000
 
-$AlwaysSpawnItemsDevelopMode []
+$!DEBUG | AlwaysSpawnItemsDevelopMode []
 C222632C 00000001 #AlwaysSpawnItemsDevelopMode
 48000010 00000000
 
-$Hitbox Color Changes Based On Damage []
+$!DEBUG | Hitbox Color Changes Based On Damage []
 C2009FA4 00000010 #Hitbox Color Changes Based On Damage
 C0A3000C 48000069
 7CA802A6 C0C50000
@@ -200,7 +200,7 @@ FCA0401E D8A1FFF4
 43580000 40A00000
 41900000 00000000
 
-$Collision Link Draw Order Fix [Punkline] []
+$!DEBUG | Collision Link Draw Order Fix [Punkline]
 C2030288 00000006 #New Draw Location
 3D808003 618C0A78
 7D8903A6 4E800421
@@ -211,13 +211,11 @@ C2030288 00000006 #New Draw Location
 C205A2EC 00000001 #Remove Original Draw
 60000000 00000000
 
-$Debug Item Spawns []
-C2089250 00000001 #Allow Staling in Develop Mode
-48000008 00000000
+$!DEBUG | Debug Item Spawns []
 C2225A10 00000001 #Starting Item is Null
 380000DD 00000000
 
-$Debug Mode Codes []
+$!DEBUG | Debug Mode Codes []
 C23FA258 00000001 #Debug Language is English by Default
 00000001 00000000
 C21B0A14 00000001 #Exiting Debug Goes to Main Menu
@@ -225,7 +223,7 @@ C21B0A14 00000001 #Exiting Debug Goes to Main Menu
 C222D638 00000001 #Tournament Mode Goes to Debug
 38000006 00000000
 
-$DebugModeFromTitleScreen []
+$!DEBUG | DebugModeFromTitleScreen []
 C21B0940 00000008 #EnterDebug
 40800000 80030000
 54030529 41820014
@@ -244,7 +242,7 @@ C21A1CC4 00000007 #InputCheck
 60001D24 7C0903A6
 4E800420 00000000
 
-$Display Animation Name for Special Moves in Develop Mode []
+$!DEBUG | Display Animation Name for Special Moves in Develop Mode []
 C2226ACC 00000013 #Display Animation Name for Special Moves in Develop Mode
 7F83E378 809C0014
 3D808008 618C5FD4
@@ -266,7 +264,7 @@ C2226ACC 00000013 #Display Animation Name for Special Moves in Develop Mode
 00000000 7FE3FB78
 4CC63182 00000000
 
-$Display Ungrabbable Hurtboxes []
+$!DEBUG | Display Ungrabbable Hurtboxes []
 C200A284 00000006 #Main
 2C060000 40820024
 801C0048 2C000000
@@ -275,7 +273,7 @@ C200A284 00000006 #Main
 4E800021 AB27FF80
 80630000 00000000
 
-$Hide Player GFX When Hitboxes Enabled []
+$!DEBUG | Hide Player GFX When Hitboxes Enabled []
 C205C040 00000012 #Hide Existing Model GFX
 4800000D 7C8802A6
 48000080 4E800021
@@ -317,7 +315,7 @@ C207A180 00000005 #Hide OnHit GFX When Hitboxes Enabled
 4E800420 80040030
 60000000 00000000
 
-$Hold Z for Rapid Frame Advance []
+$!DEBUG | Hold Z for Rapid Frame Advance []
 C216BBD4 00000001 #P1 - Check Rapid Fire Input
 8004000C 00000000
 C216BC00 00000001 #P2 - Check Rapid Fire Input
@@ -327,7 +325,7 @@ C216BC2C 00000001 #P3 - Check Rapid Fire Input
 C216BC58 00000001 #P4 - Check Rapid Fire Input
 8004000C 00000000
 
-$Misc Hitbox Visualizer []
+$!DEBUG | Misc Hitbox Visualizer []
 C20593B0 0000001F #Always Draw TopN For Items
 7C0802A6 90010004
 9421FF00 BE810008
@@ -418,7 +416,7 @@ BE810008 7C641B78
 7C0803A6 881F221D
 60000000 00000000
 
-$Performance Measure []
+$!DEBUG | Performance Measure []
 C21A5044 00000001 #CObj - Begin
 481EBF7D 00000000
 C2391018 00000001 #CObj- Output
@@ -428,7 +426,7 @@ C21A4FA0 00000001 #GObjProc - Begin
 C2390DFC 00000001 #GObjProc - Output
 4E800021 00000000
 
-$Physics Display []
+$!DEBUG | Physics Display []
 C2225554 000000DD #Main
 900DB484 7C0802A6
 90010004 9421FF00
@@ -652,7 +650,7 @@ BA810008 80010104
 38210100 7C0803A6
 60000000 00000000
 
-$Toggle Focused Player in Develop Mode Camera []
+$!DEBUG | Toggle Focused Player in Develop Mode Camera []
 C22276F4 00000015 #Switch Focused Player in Develop Mode
 7C0802A6 90010004
 9421FF00 BE810008
@@ -676,7 +674,7 @@ C22276F4 00000015 #Switch Focused Player in Develop Mode
 618C0A50 7D8903A6
 4E800421 00000000
 
-$Disable FoD in Doubles []
+$!GAMEPLAY | Disable FoD in Doubles []
 C2266CE0 0000000C #Disable FoD in Doubles
 80CD8840 38C61CB0
 80A60018 3C60E700
@@ -691,7 +689,7 @@ C2266CE0 0000000C #Disable FoD in Doubles
 90A60018 48000004
 38600001 00000000
 
-$Disable FoD Reflection []
+$!GAMEPLAY | Disable FoD Reflection []
 C208114C 0000000C #Disable FoD Reflection
 7C030378 7C0802A6
 90010004 9421FF00
@@ -706,7 +704,7 @@ BA810008 80010104
 7C601B78 808DC18C
 80640020 00000000
 
-$Hide Nametag When Invisible []
+$!GAMEPLAY | Hide Nametag When Invisible []
 C22FCCD8 0000000D #Hide Nametag When Invisible
 3C608046 6063B6A0
 886324D0 2C030001
@@ -722,7 +720,7 @@ C22FCCD8 0000000D #Hide Nametag When Invisible
 7D8903A6 4E800420
 281E0000 00000000
 
-$Neutral Spawn []
+$!GAMEPLAY | Neutral Spawn []
 C216E510 00000093 #Neutral Spawn
 7C0802A6 90010004
 9421FF00 BE810008
@@ -872,7 +870,7 @@ FFFFFFFF 4E800021
 7C0803A6 881F24D0
 60000000 00000000
 
-$CSS KO Star Codes []
+$!GAMEPLAY | CSS KO Star Codes []
 C216EBAC 0000000F #Calculate KO Stars Upon Exiting Dairantou
 3C608047 60639D30
 88630000 2C030002
@@ -892,7 +890,7 @@ C216EBAC 0000000F #Calculate KO Stars Upon Exiting Dairantou
 C21A5600 00000001 #Disable KO Star Deletion When Leaving CSS
 60000000 00000000
 
-$Enable C Stick Always []
+$!GAMEPLAY | Enable C Stick Always []
 C202B0F8 00000001 #1P Camera
 38600000 00000000
 C202A124 00000001 #1P Camera2
@@ -921,7 +919,7 @@ C002C35C 00000000
 C206AE90 00000001 #Spoof Debug Level as 0 for Human C Stick Inputs
 38000000 00000000
 
-$Disable Rumble on Unplug []
+$!MENU | Disable Rumble on Unplug []
 C23775A4 00000008 #Disable Rumble on Unplug
 8879000A 7C630774
 2C03FFFF 40820028
@@ -932,7 +930,7 @@ C23775A4 00000008 #Disable Rumble on Unplug
 4E800421 8819000A
 60000000 00000000
 
-$DPad Down to Random Stage []
+$!MENU | DPad Down to Random Stage []
 C226325C 00000008 #DPad Down to Random Stage
 3C808045 6084BF17
 54E0077B 4182001C
@@ -943,7 +941,7 @@ C226325C 00000008 #DPad Down to Random Stage
 38600000 98640000
 54E004E7 00000000
 
-$Enable 1P in VS Mode No Time []
+$!MENU | Enable 1P in VS Mode No Time []
 C2263064 0000000C #Enable 1P in VS Mode No Time
 7C0802A6 90010004
 9421FF00 BE810008
@@ -958,7 +956,7 @@ BA810008 80010104
 38210100 7C0803A6
 60000000 00000000
 
-$Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip Result Screen []
+$!MENU | Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip Result Screen []
 C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip Result Screen
 3BA00000 7FA3EB78
 3D80801A 618C3680
@@ -982,12 +980,12 @@ C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip
 48000008 3B600000
 3BA00000 00000000
 
-$L+R+A Returns to CSS During SSS []
+$!MENU | L+R+A Returns to CSS During SSS []
 C225B8BC 00000002 #L+R+A Returns to CSS During SSS
 3C608047 60639D30
 88630000 00000000
 
-$Last Unplug Closes All CSS Doors []
+$!MENU | Last Unplug Closes All CSS Doors []
 C22605E4 00000012 #Last Unplug Closes All CSS Doors
 7C0802A6 90010004
 9421FF00 BE810008
@@ -1008,11 +1006,11 @@ BA810008 80010104
 38210100 7C0803A6
 881F0004 00000000
 
-$Unplugging Closes CSS Door []
+$!MENU | Unplugging Closes CSS Door []
 C22605FC 00000001 #Unplugging Closes CSS Door
 38C00003 00000000
 
-$BGM Display []
+$!MENU | BGM Display []
 C22F3A48 00000013 #Create Text Canvas
 7C0802A6 90010004
 9421FF00 BE810008
@@ -1167,7 +1165,7 @@ C1600000 4E800021
 7C0803A6 3C808017
 60000000 00000000
 
-$Longer Nametags []
+$!MENU | Longer Nametags []
 C223C710 00000001 #8Characters1
 28030007 00000000
 C223C320 00000001 #8Characters2
@@ -1248,7 +1246,7 @@ EC21182A D03C002C
 4800000C 4E800021
 40800000 00000000
 
-$Random CSS Music v2 []
+$!MENU | Random CSS Music v2 []
 C21A45A8 00000003 #roll on bootup
 3D808015 618CECBC
 7D8903A6 4E800421
@@ -1258,11 +1256,11 @@ C216EBA8 00000003 #roll on match end
 7D8903A6 4E800421
 8001001C 00000000
 
-$Rumble Off []
+$!MENU | Rumble Off []
 C23D4A70 00000001 #Rumble Off
 00000000 00000000
 
-$Winners Names are Gold on CSS []
+$!MENU | Winners Names are Gold on CSS []
 C2265220 00000028 #Change Name Color
 7FA3EB78 48000039
 2C030000 4182012C
@@ -1310,15 +1308,15 @@ C216EA30 00000004 #Remember Who LRA Started
 6084B6A0 88840001
 989E000C 00000000
 
-$Faster CSS Load []
+$!QOL | Faster CSS Load []
 C22641B0 00000001 #Faster CSS Load
 38000001 00000000
 
-$Stage Music = 50 50 []
+$!QOL | Stage Music = 50 50 []
 C21C26B0 00000001 #Stage Music = 50 50
 38000032 00000000
 
-$Better Camera [Achilles,UnclePunch] []
+$!QOL | Better Camera [Achilles,UnclePunch]
 C202CB30 00000014 #C-Stick Pans Camera
 4800008D 7CC802A6
 3C60804C 60631FAC
@@ -1410,7 +1408,7 @@ C202C5F0 00000019 #Pause Camera Snaps To Off Screen Players
 7C0803A6 C01A000C
 60000000 00000000
 
-$Default Tournament Settings []
+$!QOL | Default Tournament Settings []
 C23D4A4C 00000001 #4 Stocks
 04000A00 00000000
 C23D4A50 00000001 #8 Minutes
@@ -1422,11 +1420,11 @@ C23D4A48 00000001 #Stock Mode
 C23D4A78 00000001 #Tournament Stages
 E70000B0 00000000
 
-$Disable Movies []
+$!QOL | Disable Movies []
 C2182FBC 00000001 #Title InGame Demo
 4800002C 00000000
 
-$HUD Transparency []
+$!QOL | HUD Transparency []
 C22F6690 000000A9 #main
 7C0802A6 90010004
 9421FF00 BE810008
@@ -1598,7 +1596,7 @@ D023000C 83DE0004
 7C0803A6 8001001C
 60000000 00000000
 
-$Idle Screen []
+$!QOL | Idle Screen []
 C2302788 00000056 #Main
 7C0802A6 90010004
 9421FF00 BE810008
@@ -1687,7 +1685,7 @@ BA810008 80010104
 38210100 7C0803A6
 7FE3FB78 00000000
 
-$Limit Costume ID []
+$!QOL | Limit Costume ID []
 C216DED4 00000039 #costume id
 7C0802A6 90010004
 9421FF00 BE810008
@@ -1747,7 +1745,7 @@ C216DED4 00000039 #costume id
 7C0803A6 8001001C
 60000000 00000000
 
-$UCF 0 []
+$!QOL | UCF 0 []
 C20C9A44 0000002B #UCF DB
 D01F002C 7C0802A6
 90010004 9421FF00
@@ -1883,7 +1881,7 @@ BA810008 80010104
 38210100 7C0803A6
 60000000 00000000
 
-$XYDisablesStart []
+$!QOL | XYDisablesStart []
 C23775BC 00000005 #Main
 540304E7 4182001C
 5403056B 41820014
