moved skipping result screen to optional code

--- a/mexTool/lib/codes.ini
+++ b/mexTool/lib/codes.ini
@@ -121,7 +121,7 @@ C21AF6F4 00000006 #Skip Memcard Prompt
 4E800420 2C1D0000
 60000000 00000000
 
-$!ADDITIONAL | TextTransparency []
+$!ADDITIONAL | TextModifications []
 C23A9220 00000008 #add alpha tev
 38600000 3880001C
 3D808034 618C03B4
@@ -131,6 +131,18 @@ C23A9220 00000008 #add alpha tev
 3D808034 618C02D4
 7D8903A6 4E800421
 38600080 00000000
+C23A8840 0000000B #align background
+887F004A 2C030000
+41820044 48000010
+4E800021 BF000000
+BF800000 4BFFFFF5
+7D8802A6 3863FFFF
+1C630004 C03F0000
+C05F000C 7C63642E
+C09F0024 EC420132
+EE2208FA EE71102A
+48000004 801F002C
+60000000 00000000
 C23A8D90 00000002 #copy alpha to 0x8c
 981F008E 881F0033
 981F008F 00000000
@@ -956,8 +968,8 @@ BA810008 80010104
 38210100 7C0803A6
 60000000 00000000
 
-$!MENU | Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip Result Screen []
-C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip Result Screen
+$!MENU | Hold A+B for Salty Runback + Hold A+X for Random Stage []
+C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage
 3BA00000 7FA3EB78
 3D80801A 618C3680
 7D8903A6 4E800421
@@ -966,7 +978,7 @@ C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip
 5480056B 4082001C
 3BBD0001 2C1D0004
 4180FFCC 48000060
-3B600002 4800005C
+3B600002 48000058
 3D808025 618C99EC
 7D8903A6 4E800421
 3C80803F 608406D0
@@ -977,8 +989,8 @@ C21A5B14 00000015 #Hold A+B for Salty Runback + Hold A+X for Random Stage + Skip
 9064000C 3D808001
 618C8254 7D8903A6
 4E800421 3B600002
-48000008 3B600000
-3BA00000 00000000
+48000004 3BA00000
+60000000 00000000
 
 $!MENU | L+R+A Returns to CSS During SSS []
 C225B8BC 00000002 #L+R+A Returns to CSS During SSS
@@ -1311,6 +1323,10 @@ C216EA30 00000004 #Remember Who LRA Started
 $!QOL | Faster CSS Load []
 C22641B0 00000001 #Faster CSS Load
 38000001 00000000
+
+$!QOL | Skip Result Screen []
+C21A5B00 00000001 #Skip Result Screen
+3B600000 00000000
 
 $!QOL | Stage Music = 50 50 []
 C21C26B0 00000001 #Stage Music = 50 50
